public/style.css
/* ... */
body {
    /*background-image: radial-gradient(circle, rgb(67, 29, 110), rgb(130, 103, 161), rgb(106, 98, 219));*/
    background: white;
    /* overflow-x: hidden; */
    opacity: 0;

    z-index: 10;

    -webkit-transition-duration: 0.5s;
    -moz-transition-duration: 0.5s;
    -ms-transition-duration: 0.5s;
    -o-transition-duration: 0.5s;
    transition-duration: 0.5s;
    -webkit-transition-property: opacity;
    -moz-transition-property: opacity;
    -ms-transition-property: opacity;
    -o-transition-property: opacity;
    transition-property: opacity;
    text-align: center;
    font-size: 16px;
}

h1 {
    /*font-size: 24px;*/
    /*font-size: 1.67vw;*/
    font-size: 1.67em;
    text-align: center;
    /*color: red;*/
}

.item {
    opacity: 1;
   /* background: darkgray;*/
   /* background: rgb(91, 60, 104);*/
    background: white;
    color: black;
    /* box-shadow: 5px 10px 8px #401346; */
    margin-left: auto;
    margin-right: auto;
   /* width: 60%;*/
    padding: 5px;
   /* display: flex;*/
    align-items: center;
    justify-content: center;
    text-align: center;
    border-radius: 0px;
}

.item, .carousel {
   /* margin-top: 50px;*/
}

.container2 {
    /*background-image: radial-gradient(circle, black, darkgray, black);*/
    /*background: gray;*/
    /*width: 1000px;*/
    width: 100%;
    height: 580px;
   /* background: url("texture2.png");
    background-position: left top;
    background-repeat: repeat;*/
   /* margin: 100;*/
    opacity: 1.0;
    z-index: 1;

    -webkit-transition-duration: 0.3s;
    -moz-transition-duration: 0.3s;
    -ms-transition-duration: 0.3s;
    -o-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: opacity;
    -moz-transition-property: opacity;
    -ms-transition-property: opacity;
    -o-transition-property: opacity;
    transition-property: opacity;
    /*position: absolute;*/
    left: 0;
    /* font-size: 14px; */

}

.carousel-control-next {
    left: 700px;
}

.carousel-item-active {
    right: 10px;
    left: 500px;
}

 .nav-item {
    /*border-style: inset;*/
   /* border: 1px solid darkgray;*/
    /*box-shadow: 2px 5px 18px #910572;*/
   /* background-image: linear-gradient(to bottom right, purple, rgb(173, 107, 197));*/
    opacity: 1;
   /* min-width: 130px;
    max-width: 130px;
    min-height: 70px;
    max-height: 70px;*/
    /*font-size: 1.8vw;*/
    font-size: 1.4em;

    float: right;
    color: white;
    cursor: pointer;
    /*border: 1px solid red;*/
    text-align: center;
    /*height: 100px !important;*/
}

.fa-connectdevelop:hover {
    -webkit-animation:spin 4s linear infinite;
    -moz-animation:spin 4s linear infinite;
    animation:spin 4s linear infinite;
}

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

.banner {
    position: relative;
    /*left: -1100px !important;*/
    /*font-size: 45px;*/
    /*font-size: 4.53vw;*/
    font-size: 3.73em;
    float: left;
    top: 0.2em;
    opacity: 0.7;
    width: 50px;
}

.banner-name {
    /*font-size: 14px !important;*/
    /*font-size: 1.55vw !important;*/
    font-size: 0.35em !important;
    position: relative;
    left: 100px;
    /*top: -42px;*/
    top: -2.7em;
    font-family: Arvo, sans-serif;
    width: 200px;
    text-align: center;

}

.icons > i {
    /*width: 50px;
    height: 50px;*/
    text-align: center;
    /*background: darkgray;*/
    /*background: white;*/
    background-image: linear-gradient(to bottom right, rgb(12,12,12), rgb(173, 107, 197));
    display: flex;
    align-items: center;
    justify-content: center;
    /*width: 100%;
    height: 100%;*/
    /*margin-left: 300px;*/

    /*font-size: 60px;*/
    /*font-size: 4.17vw;*/
    font-size: 6.17em;
    margin-top: 30px;
    border: 2px solid black;
    /*color: rgb(78, 78, 78);*/
    color: black !important;
    /*box-shadow: 5px 10px 8px #888888;*/

}

.contact-icons > i {
    width: 200px;
    height:100px;
    display: flex;
    align-items: center;
    justify-content: center;
    /*font-size: 60px;*/
    /*font-size: 4.17vw;*/
    font-size: 5.17em;
    top: 20px;
    padding: 20px;
    border: 2px solid #8888ff;
}

.nav-item > a {
    color: white;
    /*margin: 10px;*/
}

.contact {
    background: #8888ff;
    top: 20%;
    bottom: 20%;
    height: 400px;
    /*background: purple;*/
}

.icons > div {
    background: white;
    margin-top: 20px;
}


.icons {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    /*margin-top: 150px;*/
    margin-top: 50px;
    

}

.card-div {
    width: 100% !important;
    z-index: 90;
}

div > .contact-icons {
    color: black;
}

.email {
    font-size: 1.8em;
}


div > .contact-icons:hover {
    color: black;
}

.contact-icons > i:hover {
    border: 2px solid black;
    /*box-shadow: 5px 10px 8px #8888ff;*/
    cursor: pointer;
}

.about > div > div> span {
    background: purple;
    /*font-size: 16px;*/
    /*font-size: 1.11vw;*/
    font-size: 1.11em;
    padding: 5px;
    /*box-shadow: 2px 3px 8px #8888ff;*/
    font-family: 'Arvo', serif !important;
    margin-bottom: 10px;

   
}
/* ... */

